# latexq

./: .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: development.md  latex-subset.md  latexq-flatten.md  latexq-graph.md  latexq-select.md  latexq-split.md  query-language.md
src/lq/: config.py  main.py
src/lq/flatten/: command.py
src/lq/graph/: __init__.py  builder.py  command.py  data_model.py  reference_extractor.py  render_json.py  render_text.py
src/lq/latex_interface/: data_model.py  input_resolver.py  parser.py  roundtrip.py  s1_source.py  s2_scan_model.py  s3_scanner.py  s4_structure_model.py  s5_structure_parser.py  s6_content_helpers.py
src/lq/query/: __init__.py  s1_data_model.py  s2_tokenizer.py  s3_parser.py  s4_document_index.py  s5_evaluator.py  s6_node_renderer.py  s6_render_resolution.py  s6_renderer.py
src/lq/select/: __init__.py  command.py  data_model.py
src/lq/split/: command.py  data_model.py  validate.py
src/lq/utils/: io.py  output.py  splitters.py
tests/: README.md  utils.py
tests/acceptance/cli/: test_root_cli.py
tests/acceptance/latex_roundtrip/: latex_generator.py  test_empty_appendix.py  test_parser_roundtrip_examples.py  test_roundtrip.py
tests/acceptance/query_specs/: baseline_document.py  test_fragment_queries.py  test_latex_queries.py  test_query_errors.py
tests/e2e/: test_arxiv_workflow.py
tests/unit/flatten/: test_data_model.py
tests/unit/graph/: test_builder.py  test_reference_extractor.py
tests/unit/latex_interface/: test_data_model.py  test_input_resolver.py  (+5 more)
tests/usage_docs/: test_flatten_usage.py  test_graph_usage.py  test_select_usage.py  test_split_usage.py
(+21 files in other folders)
